--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch a Sketc</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <div id="main-container">
-        
+
     </div>
     <script src="script.js"></script>
 </body>
