Add change grid size button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,18 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
-    <div id="main-container">
 
+<body>
+    <div id="button-container">
+        <button id="size-button">Change grid size</button>
     </div>
-    <script src="script.js"></script>
+    <div id="body-container">
+
+        <div id="main-container">
+
+        </div>
+        <script src="script.js"></script>
+    </div>
 </body>
+
 </html>
